Mengubah Framework JQuery Menjadi JS Vanilla

--- a/web/index.html
+++ b/web/index.html
@@ -74,7 +74,7 @@
       </div>
     </div>
 
-    <div class="row row-cols-1 row-cols-md-2 row-cols-xl-5 row-cols-lg-4 g-4 mx-5" id="movieList">
+    <div class="row row-cols-1  row-cols-sm-2 row-cols-xl-5 row-cols-lg-4 g-4 mx-5" id="movieList">
       <!-- Add Dynamic from app.js -->
      
     </div>
@@ -104,8 +104,6 @@
       </div>
     </div>
   <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
