--- a/web/index.html
+++ b/web/index.html
@@ -1,107 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Movie API</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-</head>
-<body data-bs-theme="dark">
-  <nav class="navbar navbar-expand-lg backgroundprimary fixed-top">
-    <div class="container-fluid p-3">
-      <button type="button" class="btn btn-success" id="refreshButton">WBMovie</button>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Movie</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Contact
-            </a>
-            <ul class="dropdown-menu backgroundprimary">
-              <li>
-                <a class="dropdown-item" href="#"><i class="bi bi-whatsapp"></i> Whatsapp</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="#"><i class="bi bi-discord"></i> Discord</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href=""><i class="bi bi-github"></i> Github</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="container mt-5">
-    <div class="row mt-5">
-      <div class="col">
-        <h1 class="text-center mb-4">Movies API Database</h1>
-      </div>
-      <div></div>
-      <div class="w-75 mb-5 container">
-        <form action="" type="submit" id="formSearch">
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Search Movie.." aria-label="Recipient's username"
-              aria-describedby="button-addon2" id="searchLabel" />
-            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">
-              Search
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <!-- Card List -->
-
-  <div id="apiLoadingSpinner" class="spinner-container">
-    <div class="spinner-border text-light" role="status">
-      <span class="visually-hidden">Loading...</span>
-    </div>
-  </div>
-
-  <div class="row row-cols-1  row-cols-sm-2 row-cols-xl-5 row-cols-lg-4 g-4 mx-5" id="movieList">
-    <!-- Add Dynamic from app.js -->
-  </div>
-
-  <!-- The Modal -->
-  <div class="modal fade" id="exampleModalMovie" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-      <div class="modal-content bg-dark">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">
-            Movie Details
-          </h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Movie API</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg backgroundprimary fixed-top">
+      <div class="container-fluid p-3">
+        <button type="button" class="btn btn-success" id="refreshButton">
+          WBMovie
+        </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Movie</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Contact
+              </a>
+              <ul class="dropdown-menu backgroundprimary">
+                <li>
+                  <a class="dropdown-item" href="#"
+                    ><i class="bi bi-whatsapp"></i> Whatsapp</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"
+                    ><i class="bi bi-discord"></i> Discord</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href=""
+                    ><i class="bi bi-github"></i> Github</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
         </div>
-        <div class="modal-body" id="modalBody">
+      </div>
+    </nav>
+    <div class="container mt-5">
+      <div class="row mt-5">
+        <div class="col">
+          <h1 class="text-center mb-4">Movies API Database</h1>
+        </div>
+        <div></div>
+        <div class="w-75 mb-5 container">
+          <form action="" type="submit" id="formSearch">
+            <div class="input-group mb-3">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Search Movie.."
+                aria-label="Recipient's username"
+                aria-describedby="button-addon2"
+                id="searchLabel"
+              />
+              <button
+                class="btn btn-outline-secondary"
+                type="submit"
+                id="button-addon2"
+              >
+                Search
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- Card List -->
+
+    <div id="apiLoadingSpinner" class="spinner-container">
+      <div class="spinner-border text-light" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+
+    <div
+      class="row row-cols-1 row-cols-sm-2 row-cols-xl-5 row-cols-lg-4 g-4 mx-5"
+      id="movieList"
+    >
+      <!-- Add Dynamic from app.js -->
+    </div>
+
+    <!-- The Modal -->
+    <div
+      class="modal fade"
+      id="exampleModalMovie"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content bg-dark">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              Movie Details
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
           <div class="modal-body" id="modalBody">
-            <div id="modalLoadingSpinner" class="spinner-container">
-              <div class="spinner-border text-light" role="status">
-                <span class="visually-hidden">Loading...</span>
+            <div class="modal-body" id="modalBody">
+              <div id="modalLoadingSpinner" class="spinner-container">
+                <div class="spinner-border text-light" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
-  <script src="app.js"></script>
-</body>
+    <!-- Scripts -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <script src="app.js"></script>
+  </body>
 </html>
